src/main.css
/* ... */
.export .tip .update {
    padding: 0pt 4pt;
    padding-bottom: 1pt;
    margin-left: 4pt;

    background: var(--ui-blue);
    border-radius: 2px;

    font-variant: small-caps;
	font-size: 10pt;
}

.export .warning {
    background: hsla(50, 100%, 70%, 1);
}

.export .hidden {
    display: none;
}

.export .warning ul {
    margin: 4pt 0;

    list-style-type: circle;
}

.export .options {
    margin-bottom: 8pt;
    padding: 6pt 4pt;

    background: var(--ui-black);
    border-radius: 2px;

    color: var(--ui-white);

    user-select: none;
    -webkit-user-select: none;
}

.export .options label {
    position: relative;
    top: 1px;
}

.export .options label kbd.hint {
    /* Leave some space for the checkbox itself. */
    transform: translate(-50%, -50%);
}

label input[type="checkbox"] {
    margin-top: -1px;
    margin-right: 6pt;
    width: 12pt;
    height: 12pt;
    vertical-align: middle;

    -webkit-appearance: none;
    appearance: none;
    background: var(--ui-white);
    border-radius: 2px;
    outline: none;
}

label input[type="checkbox"]:hover {
    background: hsl(0, 0%, 80%);
}

label input[type="checkbox"]:checked {
    background: var(--ui-focus);

    text-align: center;
}

label input[type="checkbox"]:checked::before {
    content: "✓";

    color: var(--ui-black);
}

.export .code {
    font: 16px monospace;
    color: white;

    white-space: pre-wrap;
    overflow-wrap: break-word;
    tab-size: 4;
    -moz-tab-size: 4;
}

/* Arrows */

.arrow > svg {
    position: absolute;
    left: 0;
    top: 0;
    overflow: visible;
    pointer-events: none;
}

.arrow.invalid, .arrow .invalid {
    display: none;
}

.arrow > svg:first-child {
    z-index: 1;
}

.arrow > svg:nth-child(2) {
    z-index: 4;
}

.arrow:not(.reconnecting) > svg:first-child > .arrow-background {
    pointer-events: stroke;
}

.arrow:not(.target):not(.selected) > svg:first-child:not(:hover) > .arrow-background,
.ui.connect .cell:not(.target):not(.selected) > svg:first-child:hover > .arrow-background,
.ui.pointer-move .cell:not(.selected) > svg:first-child:hover > .arrow-background {
    opacity: 0;
}

.arrow:not(.target):not(.selected) > svg:first-child:hover {
    opacity: 0.1 !important;
}

.arrow-endpoint {
    display: none;
}

.ui.default .arrow:hover .arrow-endpoint, .ui.default .arrow.selected .arrow-endpoint {
    display: block;
}

.arrow-endpoint {
    position: absolute;
    z-index: 3;

    background: white;
}

.arrow-endpoint:hover {
    border: var(--ui-blue) 2px solid;
}

/* Arrow labels */

.arrow .katex, .arrow .katex-error {
    font-size: 1em;
}

/* Embed */

.ui.embed {
    border-radius: 5px;
    overflow: hidden;
}

.ui.embed .panel {
    visibility: hidden;
}

.ui.embed .toolbar {
    visibility: hidden;
}

.ui.embed .focus-point {
    visibility: hidden;
}

.ui.embed .arrow:not(.target):not(.selected) > svg:first-child:hover {
    visibility: hidden;
}

.ui.embed a > .logo {
    transform: scale(0.75);
    left: auto;
    top: auto;
    left: 12px;
    bottom: 12px;
}

